# stealth_hw

./: .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wait_for_db.sh
.github/workflows/: checks.yml
app/: .flake8  config.py  database.py  main.py
app/auth/: auth.py  manager.py  models.py  schemas.py  validators.py
app/orders/: models.py  schemas.py
app/products/: crud.py  models.py  permissions.py  routers.py  schemas.py
app/tasks/: tasks.py
assg_2-database_design/: schema+queries.sql
migrations/: env.py
migrations/versions/: 293e017e3c8f_initial.py  5150ff781a99_initialdddda.py  772986ed8289_initialdddda.py
