[tool.poetry]
name = "app"
version = "0.1.0"
description = "Test task for Stealth Startup"
authors = ["Baclrary <ihorprotsak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.26.0" }
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
fastapi-users = { extras = ["sqlalchemy"], version = "^12.1.2" }
asyncpg = "^0.29.0"
celery = "^5.3.6"
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
pre-commit = "^3.6.0"
pycln = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "app"
